--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-fhir.xml
-vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
-bootstrap/compiled.php
-app/storage/
-public/storage
-public/hot
-storage/*.key
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
+.DS_Store
+env/
+bin/python-config
+*.pyc
+__pycache__/
